<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activitymain"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/centerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/press_to_start"
        android:tag="1"
        android:backgroundTint="#22DB9B"
    />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botright_button"
        android:layout_width="@dimen/length"
        android:layout_height="@dimen/length"
        android:text="@string/bottom_right"
        android:textAllCaps="false"
        android:tag="botRight"
        android:gravity="center"
        android:textSize="@dimen/fontsize"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botleft_button"
        android:layout_width="@dimen/length"
        android:layout_height="@dimen/length"
        android:text="@string/bottom_left"
        android:textAllCaps="false"
        android:tag="botLeft"
        android:gravity="center"
        android:textSize="@dimen/fontsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/topright_button"
        android:layout_width="@dimen/length"
        android:layout_height="@dimen/length"
        android:text="@string/top_right"
        android:textAllCaps="false"
        android:tag="topRight"
        android:gravity="center"
        android:textSize="@dimen/fontsize"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/topleft_button"
        android:layout_width="@dimen/length"
        android:layout_height="@dimen/length"
        android:text="@string/top_left"
        android:textAllCaps="false"
        android:tag="topLeft"
        android:gravity="center"
        android:textSize="@dimen/fontsize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="1"
        android:tag="seekbar"
        android:max="4"
        android:progressTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/centerbutton"
        android:layout_marginBottom="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:progress="2"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/centerbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/lowest_time_1"
        android:gravity="center"
        android:tag="score"
        android:textSize="@dimen/fontsize"
        />
    <TextView
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_2"
        app:layout_constraintBottom_toTopOf="@id/seekbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/fontsize"
        />
    <Button
        android:id="@+id/scorereset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/centerbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:text="@string/reset_score"
        android:tag="0"
        android:backgroundTint="#22DB9B"
        />

</androidx.constraintlayout.widget.ConstraintLayout>